--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "livewire/livewire": "^2.10",
-        "maatwebsite/excel": "^3.1"
+        "maatwebsite/excel": "^3.1",
+        "phpmailer/phpmailer": "^6.8"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
